Fix height of pinned input box on mobile

--- a/resources/assets/less/bem/beatmap-discussion-editor.less
+++ b/resources/assets/less/bem/beatmap-discussion-editor.less
@@ -52,8 +52,7 @@
 
   &__input-area {
     .content-font();
-
-    max-height: 70vh;
+    max-height: calc(70 * var(--vh, 1vh));
     overflow-y: auto;
 
     & > div {
